[package]
name = "analysis_yomikae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mecab = "0.1.5"
quick-xml = "0.26.0"
clap = { version = "4.0.27", features = ["derive"] }
serde = "1.0.147"
serde_json = "1.0.89"
tokio-stream = "0.1.11"
tracing = "0.1.37"
tokio = { version = "1.22.0", features = ["full"] }
anyhow = "1.0.66"
tracing-subscriber = { version = "0.3.16", features = ["registry"]}
listup_law = { git="https://github.com/japanese-law-analysis/listup_law.git"}
#jplaw_text = { git="https://github.com/japanese-law-analysis/jplaw_text.git", tag="0.2.0" }
jplaw_text = { git="https://github.com/japanese-law-analysis/jplaw_text.git" }
search_article_with_word = { git="https://github.com/japanese-law-analysis/search_article_with_word.git"}
thiserror = "1.0.37"

